# See: https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "asimov-signal-module"
version = "0.0.0"
authors = ["ASIMOV Community"]
edition = "2024"
#rust-version = "1.85"
description = "ASIMOV module for importing Signal chats."
#documentation = "https://docs.rs/asimov-signal-module"
readme = true
homepage = "https://github.com/asimov-modules"
repository = "https://github.com/asimov-modules/asimov-signal-module"
license = "Unlicense"
keywords = ["asimov-module", "asimov", "ai"]
categories = ["command-line-utilities", "text-processing"]            # TODO
publish = true

[features]
default = ["all", "cli", "std"]
all = ["tracing"]
cli = ["asimov-module/cli", "std", "dep:clap", "dep:clientele"]
std = ["asimov-module/std", "clap?/std", "clientele?/std"]
tracing = ["asimov-module/tracing", "clientele?/tracing"]
unstable = []

[dependencies]
asimov-module = { version = "25.0.0-dev.18", default-features = true }
clap = { version = "4.5", default-features = false, features = [
    "std",
], optional = true }
clientele = { version = "0.3.8", default-features = false, features = [
    "clap",
    "std",
], optional = true }
rusqlite = { version = "0.37", default-features = true, features = [
    "bundled",
    "jiff",
    "serde_json",
] }
serde_json = { version = "1", default-features = false, features = [
    "alloc",
    "preserve_order",
] }

[profile.release]
opt-level = "z"
strip = true
lto = "thin"

[[bin]]
name = "asimov-signal-reader"
path = "src/reader/main.rs"
required-features = ["cli"]

[patch.crates-io]
asimov-module = { git = "https://github.com/asimov-platform/asimov.rs.git" }
