# See: https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "asimov-signal-module"
version = "0.0.1"
authors = ["ASIMOV Community"]
edition = "2024"
#rust-version = "1.85"
description = "ASIMOV module for importing Signal chats."
#documentation = "https://docs.rs/asimov-signal-module"
readme = true
homepage = "https://github.com/asimov-modules"
repository = "https://github.com/asimov-modules/asimov-signal-module"
license = "Unlicense"
keywords = ["asimov-module", "asimov", "ai"]
categories = ["command-line-utilities", "text-processing"]            # TODO
publish = true

[features]
default = ["all", "cli", "std"]
all = ["pretty", "tracing"]
cli = ["asimov-module/cli", "std", "dep:clap", "dep:clientele"]
std = ["asimov-module/std", "clap?/std", "clientele?/std"]
unstable = []

# Optional features:
pretty = []
tracing = ["asimov-module/tracing", "clientele?/tracing"]

[dependencies]
asimov-module = { version = "25.0.0-dev.21", default-features = true }
hex = "0.4"
libaes = "0.7"
pbkdf2 = "0.12"
rusqlite = { version = "0.37", default-features = true, features = [
    "bundled-sqlcipher-vendored-openssl",
    "jiff",
    "serde_json",
] }
serde_json = { version = "1", default-features = false, features = [
    "alloc",
    "preserve_order",
] }
sha1 = "0.10"

# Optional integrations:
clap = { version = "4.5", default-features = false, features = [
    "std",
    "string",
], optional = true }
clientele = { version = "0.3.8", default-features = false, features = [
    "clap",
    "std",
], optional = true }

[profile.release]
opt-level = "z"
strip = true
lto = "thin"

[[bin]]
name = "asimov-signal-reader"
path = "src/reader/main.rs"
required-features = ["cli"]
